going between heads.


-------------------------------------------------------------------------------

Sat Mar 25 18:16:11 PST 2000
(Mandrake)

slightly better arranger code for XINERAMA - this should ALSO fix a couple of
KDE arranger problems that people reported, too.

-------------------------------------------------------------------------------

Sat Mar 25 18:17:32 PST 2000
(Mandrake)

oops, left a debugging printf in arrange.c

-------------------------------------------------------------------------------

Sat Mar 25 20:51:51 PST 2000
(Mandrake)

more xinerama support.  This time settings dialogs pop up centered on the
current head if there isn't a settings dialog already open.
Next - edge resistance between heads.

-------------------------------------------------------------------------------

Sat Mar 25 20:58:49 PST 2000
(Mandrake)

oops, debugging printfs

-------------------------------------------------------------------------------

Sun Mar 26 13:42:23 PST 2000
(Mandrake)

fixed edge resistance between heads when you're using xinerama.

-------------------------------------------------------------------------------

Sun Mar 26 14:16:39 PST 2000
(Mandrake)

added xinerama support for maximizing windows.  They'll stay on the current
had unless you use the "absolute" option, which means you want as much space
as possible

-------------------------------------------------------------------------------

Sun Mar 26 15:40:38 PST 2000
(Mandrake)

new "configpanel" ipc command.  This way I can use my config panels from efm
by building a menu that runs eesh *grin*

-------------------------------------------------------------------------------

Tue Mar 28 10:31:25 PST 2000
(Mandrake)

fixed maximize bug where it would pay attention to iconified windows.

-------------------------------------------------------------------------------

Thu Mar 30 15:43:39 PST 2000
(Mandrake)

fixed logout dialog box to work properly under xinerama