@@ -23,6 +23,10 @@ Added option to focus windows as they are cycled in the focuslist.
 Added support for xinerama.  edge resistance between heads.  windows pop up on currently focused heads.  Maximize (all but absolute) stays on current head
 added "configpanel" IPC command so you can open config panels via eesh.
 fix for maximize to ignore iconified windows
+fixed dock app support
+fix to speed up epplets by merging snap saves in timer event
+fixed ascents in I18N fonts
+minor initialization fix in eesh
 
 The Road to 0.17 (post 0.16.x):
 File Manager Preview Application (you'll hopefully get a chance to see a little bit of a preview of what E's filemanager will look like)
